--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <!-- Load our React component. -->
-    <script src="game.js"></script>
+    <script src="build/game.js"></script>
   </body>
 
 </html>
