--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h1 class="mt-5">Hi there!</h1>
+            <h1 class="mt-5">Hi there! Mingalarbar.</h1>
           <p class="lead">I hope you are having a great day.</p>
           <p class="lead">Please fiddle with these buttons while I procrastinate building this site</p>
           <div class="lead" id="puzzle_container"></div>
