--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Bare - Start Bootstrap Template</title>
+    <title>Kyi T Aung</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,6 +30,15 @@
          zoom: 4
       }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121619169-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-121619169-1');
+    </script>
 
   </head>
 
@@ -49,6 +58,12 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="https://github.com/hummingV">GitHub
+
+              </a>
+            </li>
+
 
           </ul>
         </div>
@@ -77,7 +92,7 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <!-- Load our React component. -->
-    <script src="build/game.js"></script>
+    <script src="game.js"></script>
   </body>
 
 </html>
